# dxatc

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
lib/dxatc-engine/: CMakeLists.txt
lib/dxatc-engine/include/dxatc-engine/: aircraft.h  airline.h  airport.h  airport_xplane.h  callsign.h  controller.h  flightplan.h  frequency.h  latlon.h  metar.h  metar_xplane.h  navdata.h  stdphrase.h  transponder.h  types.h  weather.h  world.h  xplane.h
lib/dxatc-engine/src/: airport.c  airport_xplane.c  frequency.c  latlon.c  metar.c  metar_xplane.c  stdphrase.c
lib/dxatc-utils/: CMakeLists.txt
lib/dxatc-utils/include/dxatc-utils/: macros.h  socket.h  str.h  vvtor.h
lib/dxatc-utils/src/: str.c  vvtor.c
tests/: CMakeLists.txt  airport_xplane_load.c  metar_decode.c  metar_decode_xplane.c  stdphrase.c  stdphrase_tokens.c  str.c
tests/wip/: .add_ai_plane.c
